--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Piret Otsason</h4>
-									<div class="team-member-position">CEO &amp; Co-Founder</div>
+									<div class="team-member-position">CEO</div>
 									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
 								</div>
 							</div>
@@ -310,6 +310,18 @@
 								<div class="team-member-text">
 									<h4 class="team-member-name">Maris Põlluäär</h4>
 									<div class="team-member-position">Tallinn City Manager</div>
+									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- TEAM MEMBER 3 -->
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Keili Retter</h4>
+									<div class="team-member-position"></div>
 									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
 								</div>
 							</div>
