--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
 						<!-- TEAM MEMBER 3 -->
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Keili Retter</h4>
