--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Maris Põlluäär</h4>
-									<div class="team-member-position">Tallinn City Manager</div>
+									<div class="team-member-position">City Manager</div>
 									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
 								</div>
 							</div>
@@ -321,7 +321,7 @@
 								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Keili Retter</h4>
-									<div class="team-member-position"></div>
+									<div class="team-member-position">Host</div>
 									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
 								</div>
 							</div>
