--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		
 		<!-- BASIC INFO -->
 		<title>FamilyStay - family-friendly apartments in Tallinn</title>
-		<meta name="author" content="David Rozando">
-		<meta name="keywords" content="responsive, parallax, bootstrap, html5 template, one page, landing page">
+		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly">
 		<meta name="description" content="FamilyStay - family-friendly apartments in Tallinn">
 
 		<!-- FAVICONS -->
@@ -79,7 +78,7 @@
 						<!-- NAVIGATION LINKS -->
 						<ul id="header-nav" class="nav navbar-nav">
 							
-							<li><a href="#hero" class="hidden">Top</a></li>
+							<li><a href="#hero">Top</a></li>
 
 							<li><a href="#portfolio">Apartments</a></li>
 							<li><a href="#about">About</a></li>
