--- a/index.html
+++ b/index.html
@@ -269,17 +269,17 @@
 							<p>My family with small kids likes to travel a lot, but traditional hotel rooms are not the best option. We want to offer accomodation just like we want to have ourselves when we travel with kids.</p>
 							<ul class="icon-list">
 								<li>
-									<span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
+									<span class="icon-list-icon fa fa-home" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Enough space</h4>
 									<p>We know that you need room with family. Apartments have kitchen facilities so you can cook yourself.</p>
 								</li>
 								<li>
-									<span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
+									<span class="icon-list-icon fa fa-users" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Residential</h4>
 									<p>You stay next to local families in residential area close to playgrounds, but still centrally located.</p>
 								</li>
 								<li>
-									<span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
+									<span class="icon-list-icon fa fa-child" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">All you need</h4>
 									<p>Our apartments are equipped with toys and other stuff your kids need.</p>
 								</li>
@@ -357,7 +357,7 @@
 					<h2 class="section-heading text-center">Trusted by Hundreds of Families</h2>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<a href="https://www.airbnb.com/superhost" target="_blank"><img src="images/contents/airbnb-superhost.png" alt="" width="15%"></a>
+						<a href="https://www.airbnb.com/superhost" target="_blank"><img src="images/contents/airbnb-superhost.png" alt="Airbnb Superhost program" width="15%"></a>
 					</div>
 
 					<div class="testimonial-row row">
@@ -469,14 +469,15 @@
 
 							<h2 class="section-heading text-left">We <span class="fa fa-heart text-primary"></span> to host</h2>
 
-							<p>Please get in touch if you have questions</p>
+							<p>Feel free to get in touch!</p>
 
 							<div class="row">
 								<address class="col-sm-6">
 									<strong>Familystay OÜ</strong>
 									<ul class="fa-ul">
+                                        <li><i class="fa-li fa fa-user"></i>Piret Otsason, Founder</li>
                                         <li><i class="fa-li fa fa-facebook"></i>Facebook: <a href="https://www.facebook.com/piret.johanson" target="_blank">Familystay Tallinn</a></li>
-                                        <li><i class="fa-li fa fa-envelope"></i>E-mail: piret.familystay@gmail.com</li>
+                                        <li><i class="fa-li fa fa-at"></i>E-mail: piret.familystay@gmail.com</li>
                                         <li><i class="fa-li fa fa-phone"></i>Phone: +372 53 022 599</li>
 									</ul>										
 								</address>
