--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 						<!-- DESCRIPTION TEXT -->
 						<div class="about-text col-md-6">
 							<p class="lead">Travelling with kids should be fun and comfortable.</p>
-							<p>My family with small kids likes to travel a lot, but traditional hotel rooms are not the best option. We want to offer accomodation just like we want to have ourselves when we travel with kids.</p>
+							<p>My family with small kids likes to travel a lot, but traditional hotel rooms are not the best option. Our goal is to provide family-friendly accomodation, just like we would like to have ourselves when we travel.</p>
 							<ul class="icon-list">
 								<li>
 									<span class="icon-list-icon fa fa-home" data-animation="bounceIn"></span>
@@ -375,7 +375,7 @@
 									<span class="fa fa-star"></span>
 									<span class="fa fa-star"></span>
 								</span>
-								<cite class="testimonial-cite">Stefan, Germany</cite>
+								<cite class="testimonial-cite">Stefan, Finland</cite>
 							</div>
 						</div>
 
@@ -392,7 +392,7 @@
 									<span class="fa fa-star"></span>
 									<span class="fa fa-star"></span>
 								</span>
-								<cite class="testimonial-cite">Julius, Lithuania</cite>
+								<cite class="testimonial-cite">Julia, Lithuania</cite>
 							</div>
 						</div>
 
