--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!-- BASIC INFO -->
-		<title>FamilyStay - family-friendly apartments in Tallinn</title>
+		<title>FAMILYSTAY - Family-Friendly Apartments in Tallinn</title>
 		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly, airbnb, booking, rent">
-		<meta name="description" content="FamilyStay - family-friendly apartments in Tallinn">
+		<meta name="description" content="FAMILYSTAY - Family-Friendly Apartments in Tallinn">
 
 		<!-- FAVICONS -->
 		<link rel="icon" href="images/favicons/favicon.ico">
@@ -92,9 +92,9 @@
 
 							<li><a href="#portfolio">Apartments</a></li>
 							<li><a href="#about">About</a></li>
-							<!-- <li><a href="#team">The Team</a></li> -->
+							<li><a href="#team">The Team</a></li>
 							<li><a href="#contact-maps">Contact Us</a></li>
-							<!-- <li><a href="for_owners.html">For Owners</a></li> -->
+							<!-- <li><a href="for_owners.html">Host with Us</a></li> -->
 							
 							<!-- HEADER ACTION BUTTON 
 							<li class="header-action-button"><a href="#portfolio" class="btn btn-primary">Stay With Us</a></li>-->
@@ -148,7 +148,7 @@
 
 										<h1 class="hero-title">FamilyStay Tallinn</h1>
 
-										<p class="hero-tagline">Family-friendly apartments in Tallinn</p>
+										<p class="hero-tagline">Family-Friendly Apartments in Tallinn</p>
 
 									</div>
 
@@ -266,22 +266,22 @@
 						<!-- DESCRIPTION TEXT -->
 						<div class="about-text col-md-6">
 							<p class="lead">Travelling with kids should be fun and comfortable.</p>
-							<p>My family with small kids likes to travel a lot, but traditional hotel rooms are not the best option. Our goal is to provide family-friendly accomodation, just like we would like to have ourselves when we travel.</p>
+							<p>We like to travel a lot with our kids, but traditional hotel rooms are not the best option. My goal is to provide family-friendly accomodation, just like we would want to have ourselves when we travel.</p>
 							<ul class="icon-list">
 								<li>
 									<span class="icon-list-icon fa fa-home" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Enough space</h4>
-									<p>We know that you need room with family. Apartments have kitchen facilities so you can cook yourself.</p>
+									<p>We know that you need room with family. Apartments have kitchen facilities so you can cook yourself, and you can still enjoy your evening time, when kids sleep in another room.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-users" data-animation="bounceIn"></span>
-									<h4 class="icon-list-title">Residential</h4>
-									<p>You stay next to local families in residential area close to playgrounds, but still centrally located.</p>
+									<h4 class="icon-list-title">Like a local</h4>
+									<p>You will stay next to local families in residential areas close to playgrounds and amenities, but it's still centrally located. We also give you local hints, so you can feel like home right from the start.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-child" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">All you need</h4>
-									<p>Our apartments are equipped with toys and other stuff your kids need.</p>
+									<p>Our apartments are equipped with toys, utensils and other stuff your kids need, so you don't have to bring that extra luggage when you travel.</p>
 								</li>
 							</ul>
 						</div>
@@ -294,12 +294,12 @@
 
 
 			<!-- TEAM
-			================================= 
+			================================= -->
 			<section id="team" class="team-section section">
 
 				<div class="container-fluid">
 					
-					<h2 class="section-heading text-center">Who We Are</h2>
+					<h2 class="section-heading text-center">People behind FamilyStay</h2>
 
                     <center>
 					<div class="team-row row">
@@ -309,8 +309,8 @@
 								<img class="team-member-picture" src="images/contents/team-member-1.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Piret Otsason</h4>
-									<div class="team-member-position">CEO</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<div class="team-member-position">Founder</div>
+									<p class="team-member-description">Piret loves to travel with her family. Big fan of CouchSurfing and Airbnb.</p>
 								</div>
 							</div>
 						</div>
@@ -321,7 +321,7 @@
 								<div class="team-member-text">
 									<h4 class="team-member-name">Maris Põlluäär</h4>
 									<div class="team-member-position">City Manager</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<p class="team-member-description">Maris has international experience with managing homestay apartments.</p>
 								</div>
 							</div>
 						</div>
@@ -331,8 +331,8 @@
 								<img class="team-member-picture" src="images/contents/team-member-3.jpg" alt="">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Keili Retter</h4>
-									<div class="team-member-position">Host</div>
-									<p class="team-member-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+									<div class="team-member-position">Guest Manager</div>
+									<p class="team-member-description">Keili is super friendly and loves to talk to people and give advice about Tallinn.</p>
 								</div>
 							</div>
 						</div>
@@ -344,7 +344,7 @@
 </center>
 				</div>
 
-			</section>-->
+			</section>
 
 
 
@@ -514,7 +514,7 @@
 
 					<h3 class="closing-shout">Have an apartment in Tallinn suitable for families?</h3>
 
-					<div class="closing-buttons" data-animation="tada"><a href="#contact-maps" class="anchor-link btn btn-lg btn-primary">Put it to work with us</a></div>
+					<div class="closing-buttons" data-animation="tada"><a href="#contact-maps" class="anchor-link btn btn-lg btn-primary">Host with us</a></div>
 
 				</div>
 
