seo action buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Drew - A Multipurpose Landing Page Template, designed by David Rozando (http://design.davidrozando.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -13,7 +12,7 @@
 		
 		<!-- BASIC INFO -->
 		<title>FAMILYSTAY - Family-Friendly Apartments in Tallinn</title>
-		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly, airbnb, booking, rent">
+		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly, airbnb, booking, rent, family apartments tallinn">
 		<meta name="description" content="FAMILYSTAY - Family-Friendly Apartments in Tallinn">
 
 		<!-- FAVICONS -->
@@ -78,7 +77,7 @@
 
 						<!-- HEADER LOGO -->
 						<a class="navbar-logo navbar-brand anchor-link" href="#hero">
-							<img src="images/logos/white-header-logo.png" srcset="images/logos/white-header-logo@2x.png 2x" alt="Drew">
+							<img src="images/logos/white-header-logo.png" srcset="images/logos/white-header-logo@2x.png 2x" alt="FamilyStay">
 						</a>
 
 					</div>
@@ -188,7 +187,7 @@
 								<div class="portfolio-item-text">
 									   <h4 class="portfolio-item-title">1BR Kalamaja Soo Street</h4>
 									<p class="portfolio-item-description">Sunny apartment just 5 minutes walk from Old Town. Kid-friendly inner yard.</p>
-                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/9132551" target="_blank">More info &amp; availability</a></p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/9132551" target="_blank" class="btn btn-primary">Check Availability</a></p>
 								</div>
 							</div>
 						</div>
@@ -201,7 +200,7 @@
 								<div class="portfolio-item-text">
 									<h4 class="portfolio-item-title">1BR Old Town Pikk Street</h4>
 									<p class="portfolio-item-description">Cozy apartment in the middle of Old Town. Ideally located for sights, restaurants etc.</p>
-                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/6923022" target="_blank">More info &amp; availability</a></p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/6923022" target="_blank" class="btn btn-primary">Check Availability</a></p>
 								</div>
 							</div>
 						</div>
@@ -216,7 +215,7 @@
 								<div class="portfolio-item-text">
 									<h4 class="portfolio-item-title">2BR Old Town Väike-Karja Street</h4>
 									<p class="portfolio-item-description">Spacious apartment with splendid views. Perfect location next to city center.</p>
-                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/8988450" target="_blank">More info &amp; availability</a></p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/8988450" target="_blank" class="btn btn-primary">Check Availability</a></p>
 
 								</div>
 							</div>
@@ -230,7 +229,7 @@
 								<div class="portfolio-item-text">
 									<h4 class="portfolio-item-title">3BR Kalamaja Vibu Street</h4>
 									<p class="portfolio-item-description">Spacious and quiet family apartment right at the Kalamaja park.</p>
-                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/8349723" target="_blank">More info &amp; availability</a></p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/8349723" target="_blank" class="btn btn-primary">Check Availability</a></p>
 
 								</div>
 							</div>
