--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 							
 							<li><a href="#hero">Home</a></li>
 
-							<li><a href="#portfolio">Apartments</a></li>
+							<li><a href="#apartments">Apartments</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#team">The Team</a></li>
 							<li><a href="#contact-maps">Contact Us</a></li>
 							<!-- <li><a href="for_owners.html">Host with Us</a></li> -->
 							
 							<!-- HEADER ACTION BUTTON 
-							<li class="header-action-button"><a href="#portfolio" class="btn btn-primary">Stay With Us</a></li>-->
+							<li class="header-action-button"><a href="#apartments" class="btn btn-primary">Stay With Us</a></li>-->
 
 						</ul>
 
@@ -152,7 +152,7 @@
 									</div>
 
 									<p class="hero-buttons text-center">
-										<a href="#portfolio" class="btn btn-lg btn-primary">Stay with us</a>
+										<a href="#apartments" class="btn btn-lg btn-primary">Stay with us</a>
 										<!-- <a href="for_owners.html" class="btn btn-lg btn-default">Host with us</a> -->
 									</p>
 
@@ -165,13 +165,13 @@
 				</div>
 
 				<!-- HERO START LINK -->
-				<a href="#portfolio" class="hero-start-link anchor-link"><span class="fa fa-angle-double-down"></span></a>
+				<a href="#apartments" class="hero-start-link anchor-link"><span class="fa fa-angle-double-down"></span></a>
 
 			</section>
 
             <!-- PORTFOLIO
 			================================= -->
-			<section id="portfolio" class="portfolio-section section">
+			<section id="apartments" class="portfolio-section section">
 
 				<div class="container-fluid">
 
