--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 				<div class="container-fluid">
 
-					<h2 class="section-heading text-center">Our Apartments</h2>
+					<h2 class="section-heading text-center">Family Apartments in Tallinn</h2>
 
 					<div class="portfolio-row row">
 
