--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- BASIC INFO -->
 		<title>FAMILYSTAY - Family-Friendly Apartments in Tallinn</title>
 		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly, airbnb, booking, rent, family apartments tallinn">
-		<meta name="description" content="Visiting Tallinn with kids? Stay in our cozy and comfortable family apartments in the center of Tallinn.">
+		<meta name="description" content="Visiting Tallinn with kids? Stay in a cozy and comfortable family apartment in the center of Tallinn.">
 
 		<!-- FAVICONS -->
 		<link rel="icon" href="images/favicons/favicon.ico">
