--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 		<link rel="icon" href="images/favicons/favicon.ico">
 		<link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png">
 
+        <!-- OG -->
+        <meta property="og:site_name" content="Familystay" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="http://familystay.ee/images/backgrounds/bg-oldtown-1.jpg" />
+        
 		<!-- CSS
 		================================= -->
 
