--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 						</button>
 
 						<!-- HEADER LOGO -->
-						<a class="navbar-logo navbar-brand anchor-link" href="#hero">
-							<img src="images/logos/white-header-logo.png" srcset="images/logos/white-header-logo@2x.png 2x" alt="FamilyStay">
+						<a class="navbar-logo navbar-brand anchor-link" href="#hero" title="Family Apartments in Tallinn">
+							<img src="images/logos/white-header-logo.png" srcset="images/logos/white-header-logo@2x.png 2x" alt="Familystay">
 						</a>
 
 					</div>
