--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
 								<address class="col-sm-6">
 									<strong>Familystay OÜ</strong>
 									<ul class="fa-ul">
-                                        <li><i class="fa-li fa fa-user"></i>Piret Otsason, Founder</li>
-                                        <li><i class="fa-li fa fa-facebook"></i>Facebook: <a href="https://www.facebook.com/piret.johanson" target="_blank">Familystay Tallinn</a></li>
-                                        <li><i class="fa-li fa fa-at"></i>E-mail: piret.familystay@gmail.com</li>
-                                        <li><i class="fa-li fa fa-phone"></i>Phone: +372 53 022 599</li>
+                                        <!--<li><i class="fa-li fa fa-user"></i>Piret Otsason, Founder</li>-->
+                                        <li><i class="fa-li fa fa-facebook"></i><a href="https://www.facebook.com/piret.johanson" target="_blank">Familystay Tallinn</a></li>
+                                        <li><i class="fa-li fa fa-at"></i>piret.familystay@gmail.com</li>
+                                        <li><i class="fa-li fa fa-phone"></i>+372 53 022 599</li>
 									</ul>										
 								</address>
 							</div>
