keywords, bg etc

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<!-- BASIC INFO -->
 		<title>FAMILYSTAY - Family-Friendly Apartments in Tallinn</title>
-		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, friendly, airbnb, booking, rent, home, family apartments tallinn">
+		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, kids, friendly, airbnb, booking, rent, home, family apartments tallinn, kid friendly, family accomodation tallinn, hotel tallinn">
 		<meta name="description" content="Visiting Tallinn with kids? Stay in a cozy and comfortable family apartment in the center of Tallinn.">
 
 		<!-- FAVICONS -->
@@ -22,7 +22,7 @@
         <!-- OG -->
         <meta property="og:site_name" content="Familystay" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="http://familystay.ee/images/backgrounds/bg-oldtown-1.jpg" />
+        <meta property="og:image" content="http://familystay.ee/images/backgrounds/bg-oldtown-winter.jpg" />
         
 		<!-- CSS
 		================================= -->
@@ -119,7 +119,7 @@
 
 					<!-- IMAGE BACKGROUND -->
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/bg-vibu-bedroom.jpg" alt="" style="opacity: 0.3;">
+						<img src="images/backgrounds/bg-oldtown-winter.jpg" alt="" style="opacity: 0.3;">
 					</div>
 
 					<!-- VIDEO BACKGROUND -->
@@ -158,7 +158,7 @@
 
 									<p class="hero-buttons text-center">
 										<a href="#apartments" class="btn btn-lg btn-primary" onclick="ga('send', 'event', 'button', 'click', 'main:See Our Apartments');">See Our Apartments</a>
-										<a href="#contact-maps" class="btn btn-lg btn-default" onclick="ga('send', 'event', 'button', 'click', 'main:Become a Host');">Become a Host</a>
+										<a href="#contact-maps" class="btn btn-lg btn-default" onclick="ga('send', 'event', 'button', 'click', 'main:Host With Us');">Host With Us</a>
 									</p>
 
 								</div>
@@ -275,17 +275,17 @@
 								<li>
 									<span class="icon-list-icon fa fa-home" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Enough space</h4>
-									<p>We know that you need room with family. Apartments have kitchen facilities so you can cook yourself, and you can still enjoy your evening time, when kids sleep in another room.</p>
+									<p>We know that you need room with family. Apartments have modern kitchen facilities so you can cook yourself, and you can still enjoy your evening time, when kids sleep in another room.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-users" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Like a local</h4>
-									<p>You will stay next to local families in residential areas close to playgrounds and amenities, but it's still centrally located. We also give you local hints, so you can feel like home right from the start.</p>
+									<p>You will stay next to local families in residential areas close to playgrounds and amenities, but still centrally located. We also give you local hints, so you can feel like home right from the start.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-child" data-animation="bounceIn"></span>
-									<h4 class="icon-list-title">All you need</h4>
-									<p>Our apartments are equipped with toys, utensils, high seat, baby cot and other things your kids need, so you don't have to bring that extra luggage when you travel.</p>
+									<h4 class="icon-list-title">Things you need</h4>
+									<p>Our apartments are equipped with toys, utensils, high seat, baby cot and other things your family needs, so you don't have to bring that extra luggage when you travel.</p>
 								</li>
 							</ul>
 						</div>
@@ -518,7 +518,7 @@
 
 					<h3 class="closing-shout">Have an apartment in Tallinn suitable for families?</h3>
 
-					<div class="closing-buttons" data-animation="tada"><a href="#contact-maps" class="anchor-link btn btn-lg btn-primary" onclick="ga('send', 'event', 'button', 'click', 'footer:Become a Host');">Become a Host</a></div>
+					<div class="closing-buttons" data-animation="tada"><a href="#contact-maps" class="anchor-link btn btn-lg btn-primary" onclick="ga('send', 'event', 'button', 'click', 'footer:Host With Us');">Host With Us</a></div>
 
 				</div>
 
