--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 								<div class="team-member-text">
 									<h4 class="team-member-name">Piret Otsason</h4>
 									<div class="team-member-position">Founder</div>
-									<p class="team-member-description">Piret loves to travel with her family. Big fan of CouchSurfing and Airbnb.</p>
+									<p class="team-member-description"></p>
 								</div>
 							</div>
 						</div>
@@ -323,9 +323,9 @@
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/team-member-2.jpg" alt="">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Maris Põlluäär</h4>
-									<div class="team-member-position">City Manager</div>
-									<p class="team-member-description">Maris has international experience with managing homestay apartments.</p>
+									<h4 class="team-member-name">Kristi Kräkel</h4>
+									<div class="team-member-position">Co-Founder</div>
+									<p class="team-member-description"></p>
 								</div>
 							</div>
 						</div>
@@ -336,7 +336,7 @@
 								<div class="team-member-text">
 									<h4 class="team-member-name">Keili Retter</h4>
 									<div class="team-member-position">Guest Manager</div>
-									<p class="team-member-description">Keili is super friendly and loves to talk to people and give advice about Tallinn.</p>
+									<p class="team-member-description"></p>
 								</div>
 							</div>
 						</div>
