--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!-- BASIC INFO -->
-		<title>FAMILYSTAY - Family-Friendly Apartments in Tallinn</title>
+		<title>FAMILYSTAY - Family-friendly apartments in Tallinn</title>
 		<meta name="keywords" content="family, apartment, tallinn, stay, accomodation, kids, friendly, airbnb, booking, rent, home, family apartments tallinn, kid friendly, family accomodation tallinn, hotel tallinn">
 		<meta name="description" content="Visiting Tallinn with kids? Stay in a cozy and comfortable family apartment in the center of Tallinn.">
 
