--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 
 									<div class="hero-heading text-center" data-animation="fadeIn">
 
-										<h1 class="hero-title">FamilyStay Tallinn</h1>
+										<h1 class="hero-title">Familystay Tallinn</h1>
 
-										<p class="hero-tagline">Family-Friendly Apartments in Tallinn</p>
+										<p class="hero-tagline">Family-friendly apartments in Tallinn</p>
 
 									</div>
 
